<resources>
    <string name="fileTypesPattern" translatable="false">(?i).*\\.(mp3|wav|ogg|flac|mid|3gp|mp4|m4a|flv|avi)</string>
    <string name="snackbar_sd_card_access">Access to SD-Card forbidden</string>
    <string name="dialog_sort_by_title">Sort by:</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_artist">Artist</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_type">Type</string>
    <string name="toast_on_swap_mode">Long tap on item and drag to change position</string>
    <string name="dialog_delete_files_title">Delete selected files</string>
    <string name="dialog_delete_files_message">Selected files will be deleted from sdcard. This operation cannot be undone.</string>
    <string name="toast_cant_delete_file">Can\'t delete file</string>
    <string name="last_btn_title_search_fragment">Popular</string>
    <string name="dialog_add_radio_title">Radio:</string>
    <string name="last_btn_add_radio_title">Add radio</string>
    <string name="navigation_item_files">Files</string>
    <string name="navigation_item_search">Search</string>
    <string name="navigation_item_radio">Radio</string>
    <string name="preference_header_application">Settings</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="navigation_menu_share">Share</string>
    <string name="preference_home_folder_title">Home folder</string>
    <string name="preference_category_about">About</string>
    <string name="preference_version_title">Version</string>
    <string name="preference_category_files">Files</string>
    <string name="app_name" translatable="false">Ruler Player</string>
    <string name="toast_sd_card_not_found">SD-Card not found</string>
    <string name="pref_folder_undefined">Default</string>
    <string name="pref_wifi_only_title">Wi-Fi only</string>
    <string name="pref_wifi_only_summary">Download music only over wifi</string>
    <string name="pref_download_folder_title">Download folder</string>
    <string name="pref_category_downloads_title">Downloads</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy using this app, please take a moment to rate it.
        It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_dialog_positive">Rate now</string>
    <string name="rate_dialog_negative">Never</string>
    <string name="rate_dialog_neutral">Later</string>
    <string name="radio_dialog_name_text_view">Name:</string>
    <string name="radio_dialog_description_text_view">Description:</string>
    <string name="radio_dialog_url_text_view">Radio url:</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_swap_mode">Swap positions</string>
    <string name="menu_item_close_app">Exit</string>
    <string name="menu_action_select_all">Select all</string>
    <string name="menu_action_add_to_playlist">Add to playlist</string>
    <string name="menu_action_delete_track">Delete track</string>
    <string name="menu_action_remove_from_playlist">Remove from playlist</string>
    <string name="menu_action_edit_radio">Edit radio</string>
    <string name="menu_item_delete_radio">Delete radio</string>
    <string name="menu_action_download">Download</string>
    <string name="menu_item_play">Play</string>
    <string name="menu_item_pause">Pause</string>
    <string name="menu_item_stop">Stop</string>
    <string name="menu_item_repeat_mode">Repeat mode</string>
    <string name="menu_item_sort">Sort</string>
    <string name="last_btn_playlist">Playlist</string>
    <string name="cycle_btn_start" translatable="false">Start</string>
    <string name="cycle_btn_finish" translatable="false">Finish</string>
    <string name="navigation_item_ost">OST</string>
    <string name="ost_search_view_hint">Movie title</string>
    <string name="navigation_menu_githhub" translatable="false">GitHub</string>
    <string name="pref_show_bitrate_title">Show bitrate (kbps)</string>
    <string name="pref_show_bitrate_summary">For local files</string>
    <string name="pref_request_size_title">Request size and bitrate</string>
    <string name="pref_request_size_summary">Takes longer to load tracks info</string>
    <string name="dialog_new_version_title">New version</string>
    <string name="dialog_new_version_message">A new version is available. Do you want to navigate download page?</string>
    <string name="dialog_navigate_button">Navigate</string>
    <string name="toast_save_to_default_downloads">Will be saved to the default download folder</string>

</resources>
