<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_category_files">
        <Preference
            android:defaultValue="-1"
            android:key="home_folder"
            android:summary=""
            android:title="@string/preference_home_folder_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_downloads_title">
        <Preference
            android:defaultValue="-1"
            android:key="download_folder"
            android:summary=""
            android:title="@string/pref_download_folder_title"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="wifi_only"
            android:summary="@string/pref_wifi_only_summary"
            android:title="@string/pref_wifi_only_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_about">
        <Preference
            android:key="version"
            android:title="@string/preference_version_title"/>
    </PreferenceCategory>

</PreferenceScreen>