<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/fragment_navigation_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_card_fragment"
            android:icon="@drawable/ic_sd_card_white_24dp"
            android:title="@string/navigation_item_files"
            />
        <item
            android:id="@+id/navigation_item_search_fragment"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/navigation_item_search"
            />
        <item android:id="@+id/navigation_item_ost"
              android:icon="@drawable/ic_local_movies_white_24dp"
              android:title="@string/navigation_item_ost"/>

        <item
            android:id="@+id/navigation_item_radio"
            android:icon="@drawable/ic_radio_white_24dp"
            android:title="@string/navigation_item_radio"
            />


    </group>

    <group
        android:id="@+id/external_navigation_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_menu_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/navigation_item_settings"/>

        <item
        android:id="@+id/navigation_menu_github_item"
        android:icon="@drawable/ic_action_github"
        android:title="@string/navigation_menu_githhub"/>

        <!--<item-->
            <!--android:id="@+id/navigation_menu_rate_item"-->
            <!--android:icon="@drawable/ic_star_white_24dp"-->
            <!--android:title="@string/navigation_menu_rate"/>-->
        <item
            android:id="@+id/navigation_menu_share_item"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/navigation_menu_share"/>

    </group>

</menu>