<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:title="@string/menu_action_select_all"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_playlist_add"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        android:title="@string/menu_action_add_to_playlist"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_delete_file"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="@string/menu_action_delete_track"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_playlist_remove"
        android:icon="@drawable/ic_remove_white_24dp"
        android:title="@string/menu_action_remove_from_playlist"
        app:showAsAction="always"
        />
</menu>