<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_item_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_swap_positions"
        android:icon="@drawable/ic_import_export_white_24dp"
        android:title="@string/menu_item_swap_mode"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/changeable_btn"
        android:icon="@drawable/ic_folder_special_white_24dp"
        android:title="@string/last_btn_playlist"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_item_close_app"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/menu_item_close_app"
        app:showAsAction="ifRoom"
        />


</menu>