<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:title="@string/menu_action_select_all"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_edit_radio"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/menu_action_edit_radio"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_delete_radio"
        android:icon="@drawable/ic_remove_white_24dp"
        android:title="@string/menu_item_delete_radio"
        app:showAsAction="always"
        />
</menu>